# ha-lg-aircon

./: AGENTS.md  LICENSE  PROTOCOL.md  README.md  hacs.json  pyproject.toml
.github/workflows/: validate.yml
custom_components/lg_aircon/: __init__.py  button.py  climate.py  config_flow.py  const.py  entity.py  icons.json  manifest.json  switch.py
custom_components/lg_aircon/protocol/: __init__.py  codes.py  command.py
custom_components/lg_aircon/translations/: de.json  en.json  es.json  fr.json  nl.json  pt.json
tests/: __init__.py  conftest.py  test_button.py  test_climate.py  test_config_flow.py  test_protocol.py  test_switch.py
